# opencl_example

./: CMakeLists.txt  README.md  main.cpp
demos/: cpp_demo.cpp  cv_demo.cpp  opencl_demo.cc  opencl_hello.cc
include/NNets/: nnets_cl.h  nnets_conv_cl.h
src/NNets/: nnets_cl.cc  nnets_conv_cl.cc
